Fix flex layout bug

--- a/src/app/Pages/ProjectPage/ProjectDetails/ProjectDetails.module.scss
+++ b/src/app/Pages/ProjectPage/ProjectDetails/ProjectDetails.module.scss
@@ -3,7 +3,9 @@
 .wrapper {
   margin: 100px auto;
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
+  align-items: center;
   justify-content: center;
   width: 80%;
 
